--- a/vignettes/TockyLocus.bib
+++ b/vignettes/TockyLocus.bib
@@ -64,3 +64,14 @@
     url = {https://doi.org/10.1093/discim/kyae006},
     eprint = {https://academic.oup.com/discovimmunology/article-pdf/3/1/kyae006/58196188/kyae006.pdf},
 }
+
+
+@misc{ono2024tockylocus,
+      title={TockyLocus: Quantitative Analysis Methods for Flow Cytometric Fluorescent Timer Data}, 
+      author={Masahiro Ono},
+      year={2024},
+      eprint={2411.09386},
+      archivePrefix={arXiv},
+      primaryClass={q-bio.QM},
+      url={https://arxiv.org/abs/2411.09386}, 
+}
